<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_a_service"
        android:textColor="@color/purple_500"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etService"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/service_type_hint"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="32dp"
        android:inputType="text"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/address_hint"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/etService"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="32dp"
        android:inputType="textPostalAddress"
        android:autofillHints="postalAddress" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:backgroundTint="@color/purple_500"
        android:textColor="@color/white"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/etAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>